projects/vb6parse/snapshots/syntax/statements/declarations/variables/private_variable_no_type.snap
---
source: projects/vb6parse/src/syntax/statements/declarations/variables.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DimStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: m_temp
        - kind: Newline
          text: "\n"
